Fix website on Firefox

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -238,3 +238,8 @@ p {
 .see-more-top-padding {
   height: 60px;
 }
+
+.sponsor-img {
+  width: 100%;
+  max-height: auto;
+}
